--- a/CSS/netease-music-summary/index.css
+++ b/CSS/netease-music-summary/index.css
@@ -5,6 +5,14 @@
 html,body{
     width:100%;
     height: 100%;
+    font-family: HanHei SC,PingFang SC,Helvetica Neue,Helvetica,sans-serif;
+    line-height: 1.4;
+    color: #333;
+    user-select: none;
+    word-wrap: break-word;
+    word-break: break-word;
+    white-space: normal;
+    font-size: 12px;
 }
 .music-btn{
     width: 40px;height: 40px;
@@ -36,7 +44,7 @@ html,body{
     background-image: linear-gradient(60deg,#f8ddd1,#faece5 73%,#fad2c0);
     
 }
-.art{
+.art1{
     width: 750px;
     height: 1334px;
     right: 0;
@@ -185,6 +193,290 @@ html,body{
     width: 40px;
     height: 47px;
     position: absolute;
+  }
+  .m-reportcontent{
+    bottom: 54px !important;
+    height: auto;
+    background-color: #fdf4ef;
+  }
+  .z-enter{
+    visibility: visible;
+    opacity: 1;
+    transition: opacity .3s;
+  }
+  .art{
+    bottom: 0;
+    height: 1334px;
+    transform-origin: bottom left;
+    position: absolute;
+    left: 0;
+    width: 750px;
+}
+  .lines{
+    position: absolute;
+    left: 0;
+    width: 750px;
+    bottom: 80px;
+    height: 154px;
+    background: url(//s5.music.126.net/static_public/5c21db8d4684556c72180904/lines.efe391dd03cf355b347bc58c25f512e8.png) no-repeat;
+    background-size: 100%;
+  }
+  .f-page{
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    overflow: hidden;
+    touch-action: none;
+  }
+  
+  
+  .manwrap{
+    right: 0;
+    bottom: 0;
+    position: absolute;
+    width: 486px;
+    height: 494px;
+
+  }
+  .shoubi{
+    position: absolute;
+    left: 70px;
+    top: -115px;
+    background-image: url(//s5.music.126.net/static_public/5c21db8d4684556c72180904/shoubi.dfdeb7747a98b98266ff5b0713024c87.png);
+    width: 246px;
+    height: 270px;
+    animation: p14-shoubi 1.3s steps(1) infinite;
+  }
+  @keyframes p14-shoubi{
+    0% {
+      background-position: 0 0;
+  }
+  8.33% {
+      background-position: -246px 0;
+  }
+  16.67% {
+      background-position: -492px 0;
+  }
+  25% {
+      background-position: -738px 0;
+  }
+  33.33% {
+      background-position: -984px 0;
+  }
+  41.67% {
+      background-position: -1230px 0;
+  }
+  50% {
+      background-position: -1476px 0;
+  }
+  58.33% {
+      background-position: -1722px 0;
+  }
+  66.67% {
+      background-position: -1968px 0;
+  }
+  75% {
+      background-position: -2214px 0;
+  }
+  83.33% {
+      background-position: -2460px 0;
+  }
+  91.67% {
+      background-position: -2706px 0;
+  }
+  100% {
+      background-position: -2952px 0;
+  }
+  }
+  .man{
+    top: 0;
+    left: 0;
+    background: url(//s5.music.126.net/static_public/5c21db8d4684556c72180904/man.fafe9d20caf92e672faf6cac0506c94b.png) no-repeat;
+    position: absolute;
+    width: 486px;
+    height: 494px;
+  }
+  .tou{
+    position: absolute;
+    left: 220px;
+    top: -5px;
+    width: 94px;
+    height: 101px;
+    background: url(//s5.music.126.net/static_public/5c21db8d4684556c72180904/tou.763e9f0545a28bfbc642f5d8db77c9d5.png)no-repeat;
+    animation: p14-tou 1.3s steps(1) infinite;
+  }
+  @keyframes p14-tou{
+    0% {
+      background-position: 0 0;
+  }
+  8.33% {
+      background-position: -94px 0;
+  }
+  16.67% {
+      background-position: -188px 0;
+  }
+  25% {
+      background-position: -282px 0;
+  }
+  33.33% {
+      background-position: -376px 0;
+  }
+  41.67% {
+      background-position: -470px 0;
+  }
+  50% {
+      background-position: -564px 0;
+  }
+  58.33% {
+      background-position: -658px 0;
+  }
+  66.67% {
+      background-position: -752px 0;
+  }
+  75% {
+      background-position: -846px 0;
+  }
+  83.33% {
+      background-position: -940px 0;
+  }
+  91.67% {
+      background-position: -1034px 0;
+  }
+  100% {
+      background-position: -1128px 0;
+  }
+}
+  .notes {
+      position: relative;
+      width: 750px;
+      height: 1334px;
+      background:url(//s5.music.126.net/static_public/5c21db8d4684556c72180904/notes.eca9b7c6e40734a059f7b7c7f02477ec.svg) no-repeat;
+  }
+  .content{
+    position: absolute;
+    top: 5.62%;
+    left: 8%;
+    right: 8%;
+  }
+  h4{
+    display: block;
+    margin-block-start: 1.33em;
+    margin-block-end: 1.33em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: 400;
+    margin: 0;
+  }
+  .f-animLineUp{
+    opacity: 1;
+    transform: translateY(0);
+    transition: opacity 1.2s,transform 1s,-webkit-transform 1s;
+
+  }
+  .tt{
+    padding-left: 8px;
+    font-size: 18px;
+    color: #333;
+  }
+  .paras{
+    position: absolute;
+    letter-spacing: 1px;
+    color: #333;
+    margin-top: 10px;
+    width: 100%;
+    line-height: 1;
+    font-size: 16px;
+    animation: wentao 1s infinite;
+  } 
+  @keyframes wentao{
+    0%{
+      opacity: 0;
+    }
+    100%{
+      opacity: 1;
+    }
+  }
+  .f-trunk:after{
+    content: "\300B";
+    /* content: "\201D"; */
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+  .f-trunk{
+    padding-right: 20px;
+    line-height: 1.8;
+    position: relative;
+    white-space: nowrap;
+    word-wrap: break-word;
+    overflow: hidden;
+    display: inline-block;
+    text-overflow: ellipsis;
+    max-width: 100%;
+    box-sizing: border-box;
+  }
+  .open-text{
+    position: absolute;
+    bottom: 15px;
+    left: 15px;
+    width: 147px;
+  }
+  img{
+    width: 100%;
+  }
+  .m-btmbar{
+    height: 54px;
+  }
+  .f-bd:after{
+    position: absolute;
+    z-index: 2;
+    content: "";
+    top: 0;
+    left: 0;
+    box-sizing: border-box;
+    width: 200%;
+    height: 200%;
+    transform-origin: top left;
+    border: 0 solid rgba(0,0,0,.1);
+    pointer-events: none;
+  }
+  .inner:after{
+    border: none;
+    border-top: 1px solid rgba(0,0,0,.1);
+  }
+  .inner{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    text-align: center;
+    box-sizing: border-box;
+    padding: 7px 30px;
+    background: #fff;
+    z-index: 200;
+  }
+  a{
+    text-decoration: none;
+  }
+  .f-bd{
+    z-index: 1;
+  }
+  .btn{
+    display: block;
+    width: 100%;
+    height: 40px;
+    background: #e7583e;
+    color: #fff;
+    font-size: 17px;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 9999px;
   }
   
   
