--- a/cat-eyes-movie/styl.css
+++ b/cat-eyes-movie/styl.css
@@ -2,6 +2,12 @@ html,
 body {
   width: 100%;
 }
+.flex {
+  display: flex;
+}
+.flex1 {
+  flex: 1;
+}
 .nav {
   height: 1.067rem;
   font-size: 18px;
@@ -83,6 +89,7 @@ body {
 .page .movie-header .movie .movie-container {
   position: relative;
   z-index: 1;
+  overflow: hidden;
 }
 .page .movie-header .movie .movie-container .movie-cover {
   float: left;
@@ -136,4 +143,80 @@ body {
 .page .movie-header .movie .movie-container .movie-content .movie-score .rating .rating-score {
   font-size: 0.48rem;
   color: #ffc600;
+}
+.page .movie-header .movie .movie-container .movie-content .movie-detail {
+  font-size: 12px;
+  margin-bottom: 0.16rem;
+  opacity: 0.7;
+}
+.page .movie-header .movie .movie-container .movie-content .movie-detail p {
+  margin-bottom: 0.14rem;
+}
+.page .movie-header .movie .operating {
+  margin-top: 0.5rem;
+}
+.page .movie-header .movie .operating div {
+  border: 1px solid rgba(255,255,255,0.4);
+  background-color: rgba(255,255,255,0.4);
+  font-size: 14px;
+  color: #fff;
+  position: relative;
+  z-index: 2;
+  text-align: center;
+  padding: 0.25rem 0;
+  border-radius: 4px;
+}
+.page .movie-header .movie .operating div img {
+  vertical-align: middle;
+}
+.page .movie-header .movie .operating div span {
+  vertical-align: middle;
+}
+.page .movie-header .movie .operating .movie-watch {
+  margin-right: 0.3rem;
+}
+.page .movie-header .movie .operating .movie-watch img {
+  width: 14px;
+  height: 14px;
+}
+.page .movie-header .movie .operating .movie-mark img {
+  width: 18px;
+  height: 18px;
+}
+.page .section-seperate {
+  padding-top: 0.4rem;
+  margin-bottom: 0.3rem;
+  border-top: 1px solid #e5e5e5;
+}
+.page .section-expander {
+  padding-left: 0.4rem;
+  padding-right: 0.4rem;
+}
+.page .section-expander .text-expander .text-expander_content.close {
+  min-width: 65px;
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-break: break-all;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+}
+.page .section-expander .text-expander .text-expander_button {
+  height: 0.7rem;
+  text-align: center;
+}
+.page .section-expander .text-expander .text-expander_button .icon-chevron_down {
+  width: 10px;
+  height: 10px;
+  border: 1px solid #aaa;
+  display: inline-block;
+  border-width: 0 1px 1px 0;
+  transform: rotate(45deg);
+  transition: transform 0.5s;
+}
+.page .section-expander .text-expander .text-expander_button .icon-chevron_down.up {
+  transform: rotate(-135deg);
+}
+#toast {
+  display: none;
 }
