--- a/cat-eyes-movie/styl1.styl
+++ b/cat-eyes-movie/styl1.styl
@@ -1,3 +1,4 @@
+$fontcolor = white
 html,body
     width 100%
 .nav
@@ -7,5 +8,192 @@ html,body
     background-color #1e2025
     padding 6px
     box-sizing border-box
-.arrow-left
-    border 1px solid white
+    .arrow-left
+        float left 
+        height 100%
+        position relative
+        &:after
+            content ''
+            border: 2px solid white
+            width 12px
+            height 12px
+            position absolute
+            top 50%
+            left 16px
+            border-width 0 0 2px 2px
+            transform rotateZ(45deg) translateY(-63%)
+    span
+        color $fontcolor
+        display inline-block
+.page
+    background-color #f4f4f4
+    position relative
+    z-index 1
+    margin 0
+    color #555
+    min-width 3.1rem
+    -webkit-user-select: none
+    -webkit-tap-highlight-color: rgba(255,255,255,0)
+    font: 14px/1.5 Arial, Helvetica, sans-serif
+    section
+        background-color #fff
+        border-bottom 1px solid #e5e5e5
+    .movie-header
+        padding 0
+        background #f8f8f8
+        border-bottom none
+        .movie
+            color #fff
+            padding 0.4rem
+            line-height 1
+            overflow hidden
+            position relative
+            box-sizing border-box
+            filter blur(0)
+            .movie-background,.movie-filter
+                position absolute
+                top 0
+                right 0
+                bottom 0
+                left 0
+            .movie-background
+                z-index 0
+                filter blur(0.6rem)
+                background-image url(./images/header-bg.jpg)
+                background-size cover
+                background-repeat no-repeat
+                background-position-y 40%
+            .movie-filter
+                background-color #40454d
+                opacity 0.55
+            .movie-container
+                position relative
+                z-index 1
+                overflow hidden
+                .movie-cover
+                    float left
+                    width 2.854rem
+                    height 4rem
+                    border 1px solid #f0f2f3
+                    position relative
+                    .link
+                        width 100%
+                        height 100%
+                        cursor pointer
+                        display block
+                        .img
+                            width 100%
+                    &:after
+                        content ''
+                        width 0.667rem
+                        height 0.667rem
+                        border-radius 100%
+                        background-image url(./images/bofang.png)
+                        background-size 100% auto
+                        position absolute
+                        top 50%
+                        left 50%
+                        transform translate(-50%,-50%)
+                        opacity 0.7
+                .movie-content
+                    overflow hidden    //触发BFC效果，浮动元素不会与bfc效果的容器重叠，bfc容器形成一个隔绝的容器
+                    padding-left 0.4rem
+                    .movie-name
+                        font-size 17px
+                        padding 0.08rem 0
+                    .movie-ename
+                        font-size 12px
+                        margin-bottom 0.3rem
+                    .movie-score
+                        font-size 12px
+                        margin-bottom 0.3rem
+                        .rating .img
+                            width 0.48rem
+                            height 0.48rem
+                            margin-right 2px
+                        .rating .rating-score
+                            font-size 0.48rem
+                            color #ffc600
+                    .movie-detail
+                        font-size 12px
+                        margin-bottom 0.16rem
+                        opacity 0.7
+                        p
+                            margin-bottom 0.14rem
+            .operating
+                margin-top 0.5rem
+                div
+                    border 1px solid rgba(255,255,255,.4)
+                    background-color rgba(255,255,255,.4)
+                    font-size 14px
+                    color $fontcolor
+                    position relative
+                    z-index 2
+                    text-align center
+                    padding 0.25rem 0
+                    border-radius 4px
+                    img 
+                        vertical-align middle
+                    span
+                        vertical-align middle
+                .movie-watch
+                    margin-right 0.3rem
+                    img 
+                        width 14px
+                        height 14px
+                .movie-mark
+                    img
+                        width 18px
+                        height 18px
+            .operating.flex
+                display flex
+                .flex1
+                    flex 1
+                .flex2
+                    flex 1
+    .section-seperate
+        padding-top 0.4rem
+        margin-bottom 0.3rem
+        border 1px solid #e5e5e5
+    .section-expander
+        padding-left 0.4rem
+        padding-right 0.4rem
+        .text-expander
+            .text-expander_content.close
+                min-width 65px
+                display -webkit-box
+                overflow hidden
+                text-overflow ellipsis
+                -webkit-box-orient vertical
+                -webkit-line-clamp 3
+            .text-expander_button
+                height 0.7rem
+                text-align center
+                .icon-chevron_down
+                    border 1px solid #aaaaaa
+                    width 10px
+                    height 10px
+                    display inline-block
+                    border-width 0 1px 1px 0
+                    transform rotate(45deg)
+                    transition transform 0.5s
+                .icon-chevron_down.up
+                        transform rotate(-135deg)
+                
+        
+
+
+
+
+
+#toast
+    display none
+
+
+
+            
+
+
+       
+
+
