--- a/cat-eyes-movie/css.css
+++ b/cat-eyes-movie/css.css
@@ -10,6 +10,215 @@ body {
   padding: 6px;
   box-sizing: border-box;
 }
-.arrow-left {
-  border: 1px solid #fff;
+.nav .arrow-left {
+  float: left;
+  height: 100%;
+  position: relative;
+}
+.nav .arrow-left:after {
+  content: '';
+  border: 2px solid #fff;
+  width: 12px;
+  height: 12px;
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  border-width: 0 0 2px 2px;
+  transform: rotateZ(45deg) translateY(-63%);
+}
+.nav span {
+  color: #fff;
+  display: inline-block;
+}
+.page {
+  background-color: #f4f4f4;
+  position: relative;
+  z-index: 1;
+  margin: 0;
+  color: #555;
+  min-width: 3.1rem;
+  -webkit-user-select: none;
+  -webkit-tap-highlight-color: rgba(255,255,255,0);
+  font: 14px/1.5 Arial, Helvetica, sans-serif;
+}
+.page section {
+  background-color: #fff;
+  border-bottom: 1px solid #e5e5e5;
+}
+.page .movie-header {
+  padding: 0;
+  background: #f8f8f8;
+  border-bottom: none;
+}
+.page .movie-header .movie {
+  color: #fff;
+  padding: 0.4rem;
+  line-height: 1;
+  overflow: hidden;
+  position: relative;
+  box-sizing: border-box;
+  filter: blur(0);
+}
+.page .movie-header .movie .movie-background,
+.page .movie-header .movie .movie-filter {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.page .movie-header .movie .movie-background {
+  z-index: 0;
+  filter: blur(0.6rem);
+  background-image: url("./images/header-bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position-y: 40%;
+}
+.page .movie-header .movie .movie-filter {
+  background-color: #40454d;
+  opacity: 0.55;
+}
+.page .movie-header .movie .movie-container {
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+}
+.page .movie-header .movie .movie-container .movie-cover {
+  float: left;
+  width: 2.854rem;
+  height: 4rem;
+  border: 1px solid #f0f2f3;
+  position: relative;
+}
+.page .movie-header .movie .movie-container .movie-cover .link {
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  display: block;
+}
+.page .movie-header .movie .movie-container .movie-cover .link .img {
+  width: 100%;
+}
+.page .movie-header .movie .movie-container .movie-cover:after {
+  content: '';
+  width: 0.667rem;
+  height: 0.667rem;
+  border-radius: 100%;
+  background-image: url("./images/bofang.png");
+  background-size: 100% auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0.7;
+}
+.page .movie-header .movie .movie-container .movie-content {
+  overflow: hidden;
+  padding-left: 0.4rem;
+}
+.page .movie-header .movie .movie-container .movie-content .movie-name {
+  font-size: 17px;
+  padding: 0.08rem 0;
+}
+.page .movie-header .movie .movie-container .movie-content .movie-ename {
+  font-size: 12px;
+  margin-bottom: 0.3rem;
+}
+.page .movie-header .movie .movie-container .movie-content .movie-score {
+  font-size: 12px;
+  margin-bottom: 0.3rem;
+}
+.page .movie-header .movie .movie-container .movie-content .movie-score .rating .img {
+  width: 0.48rem;
+  height: 0.48rem;
+  margin-right: 2px;
+}
+.page .movie-header .movie .movie-container .movie-content .movie-score .rating .rating-score {
+  font-size: 0.48rem;
+  color: #ffc600;
+}
+.page .movie-header .movie .movie-container .movie-content .movie-detail {
+  font-size: 12px;
+  margin-bottom: 0.16rem;
+  opacity: 0.7;
+}
+.page .movie-header .movie .movie-container .movie-content .movie-detail p {
+  margin-bottom: 0.14rem;
+}
+.page .movie-header .movie .operating {
+  margin-top: 0.5rem;
+}
+.page .movie-header .movie .operating div {
+  border: 1px solid rgba(255,255,255,0.4);
+  background-color: rgba(255,255,255,0.4);
+  font-size: 14px;
+  color: #fff;
+  position: relative;
+  z-index: 2;
+  text-align: center;
+  padding: 0.25rem 0;
+  border-radius: 4px;
+}
+.page .movie-header .movie .operating div img {
+  vertical-align: middle;
+}
+.page .movie-header .movie .operating div span {
+  vertical-align: middle;
+}
+.page .movie-header .movie .operating .movie-watch {
+  margin-right: 0.3rem;
+}
+.page .movie-header .movie .operating .movie-watch img {
+  width: 14px;
+  height: 14px;
+}
+.page .movie-header .movie .operating .movie-mark img {
+  width: 18px;
+  height: 18px;
+}
+.page .movie-header .movie .operating.flex {
+  display: flex;
+}
+.page .movie-header .movie .operating.flex .flex1 {
+  flex: 1;
+}
+.page .movie-header .movie .operating.flex .flex2 {
+  flex: 1;
+}
+.page .section-seperate {
+  padding-top: 0.4rem;
+  margin-bottom: 0.3rem;
+  border: 1px solid #e5e5e5;
+}
+.page .section-expander {
+  padding-left: 0.4rem;
+  padding-right: 0.4rem;
+}
+.page .section-expander .text-expander .text-expander_content.close {
+  min-width: 65px;
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+}
+.page .section-expander .text-expander .text-expander_button {
+  height: 0.7rem;
+  text-align: center;
+}
+.page .section-expander .text-expander .text-expander_button .icon-chevron_down {
+  border: 1px solid #aaa;
+  width: 10px;
+  height: 10px;
+  display: inline-block;
+  border-width: 0 1px 1px 0;
+  transform: rotate(45deg);
+  transition: transform 0.5s;
+}
+.page .section-expander .text-expander .text-expander_button .icon-chevron_down.up {
+  transform: rotate(-135deg);
+}
+#toast {
+  display: none;
 }
