--- a/CSS/landRover/stylus/navbar.styl
+++ b/CSS/landRover/stylus/navbar.styl
@@ -37,7 +37,7 @@
         .menu-icon
             display block
         .search-icon
-            flex 0
+            flex 0       //居中了
            
 
         
