--- a/cat-eyes-movie/styl1.styl
+++ b/cat-eyes-movie/styl1.styl
@@ -179,6 +179,47 @@ html,body
                     transition transform 0.5s
                 .icon-chevron_down.up
                         transform rotate(-135deg)
+    .section-seperate
+        .movie-celebrities
+            width 100%
+            padding 0.3rem 0.3rem 0.1rem 0.3rem
+            overflow-x scroll
+            white-space nowrap
+            box-sizing border-box
+            li
+                text-align center
+                display inline-block
+                padding 0.04rem
+                .link
+                    color #000000
+                    .movie-celebrities__pic
+                        width 1.7334rem
+                        height 2.4rem
+                        margin 0.05rem
+                        img
+                            width 100%
+                    span
+                        display block
+                        font-size 0.2rem
+                        text-overflow ellipsis
+                        overflow hidden
+                        white-space nowrap
+                    .movie-celebrities-roles
+                        color #999
+    .movie-booking
+        height 220px
+        padding-bottom 0.2rem
+        .weui-flex
+            text-align center
+            .placeholder
+                span
+                    font-size 24px
+                    color #d96a3d
+                p
+                    color #bababa
+                    margin-top 0.1rem
+                    display inline-block
+
                 
         
 
