--- a/wxappLearn/pages/main/index.wxml
+++ b/wxappLearn/pages/main/index.wxml
@@ -1,2 +1,52 @@
 <!--pages/main/index.wxml-->
-<view class="jumpPage" bindtap='bindJumpTap'>跳转一下</view>
+<!-- <view class="jumpPage" bindtap='bindJumpTap'>跳转一下</view> -->
+<!-- <button
+  type="default"
+  size="{{defaultSize}}"
+  loading="{{loading}}"
+  plain="{{plain}}"
+  disabled="{{disabled}}"
+  bindtap="default"
+  hover-class="other-button-hover"
+>
+  default
+</button> -->
+<view class="page">
+  <view class="page__hd">
+    <text class="page__title">image</text>
+    <text class="page__desc">图片</text>
+  </view>
+  <view class="page__bd">
+    <view class="section section_gap" wx:for="{{array}}" wx:for-item="item">
+      <view class="section__title">{{item.text}}</view>
+      <view class="section__ctn">
+        <image
+          style="width: 200px; height: 200px; background-color: #eeeeee;"
+          mode="{{item.mode}}"
+          wx:if="{{src}}"
+          src="{{src}}"
+        ></image>
+      </view>
+    </view>
+  </view>
+</view>
+<button
+  type="primary"
+  size="{{primarySize}}"
+  loading="{{loading}}"
+  plain="{{plain}}"
+  disabled="{{disabled}}"
+  bindtap="bindJumpTap"
+>
+  跳转一下
+</button>
+<!-- <button
+  type="warn"
+  size="{{warnSize}}"
+  loading="{{loading}}"
+  plain="{{plain}}"
+  disabled="{{disabled}}"
+  bindtap="warn"
+>
+  警告
+</button> -->
