--- a/wxappLearn/pages/main/index.wxss
+++ b/wxappLearn/pages/main/index.wxss
@@ -4,3 +4,9 @@
     text-align: center;
     padding: 1em 3em;
 }
+.button-hover {
+  background-color: red;
+}
+.other-button-hover {
+  background-color: blue;
+}
