--- a/wxappLearn/pages/main/index.wxml
+++ b/wxappLearn/pages/main/index.wxml
@@ -11,7 +11,7 @@
 >
   default
 </button> -->
-<view class="page">
+<!-- <view class="page">
   <view class="page__hd">
     <text class="page__title">image</text>
     <text class="page__desc">图片</text>
@@ -23,7 +23,6 @@
         <image
           style="width: 200px; height: 200px; background-color: #eeeeee;"
           mode="{{item.mode}}"
-          wx:if="{{src}}"
           src="{{src}}"
         ></image>
       </view>
@@ -39,7 +38,7 @@
   bindtap="bindJumpTap"
 >
   跳转一下
-</button>
+</button> -->
 <!-- <button
   type="warn"
   size="{{warnSize}}"
@@ -50,3 +49,30 @@
 >
   警告
 </button> -->
+
+<view class="container">
+  <!-- <view class="test"> -->
+    <!-- <ul>
+      <li>{{people[0].name}}</li>  小学生代码
+      <li>{{people[1].name}}</li>
+      <li>{{people[2].name}}</li>
+    </ul> -->
+    <!-- <ul>
+      <li wx:for = "{{people}}" wx:key="{{index}}">{{item.name}}</li>   唯一标识
+    </ul> -->
+  <!-- </view> -->
+ </view>
+<swiper
+  indicator-dots="true"
+  indicator-color="#ffffff"
+  autoplay="{{autoplay}}"
+  interval="{{interval}}"
+  duration="{{duration}}"
+>
+  <block wx:for="{{imgUrls}}" wx:key="{{index}}">
+    <swiper-item>
+      <image src="{{item}}" class="slide-image" width="355" height="150" />
+    </swiper-item>
+  </block>
+</swiper>
+
