--- a/wxapp/segmentfault/miniprogram/pages/next/next.wxss
+++ b/wxapp/segmentfault/miniprogram/pages/next/next.wxss
@@ -14,6 +14,7 @@
 }
 .container .main .subject-image image{
   height: 390rpx;
+  width: 100%;
 }
 .container .main .subjectNameAndInformation{
   padding: 30rpx;
@@ -104,7 +105,7 @@
   left: 50%;
   position: absolute;
   transform:translate(-50%,-50%);
-  font-size: 32rpx;
+  font-size: 30rpx;
 
 
 }
@@ -128,7 +129,7 @@
   left: 50%;
   position: absolute;
   transform:translate(-50%,-50%);
-  font-size: 32rpx;
+  font-size: 30rpx;
 }
 .container .tabBar .tabBar-three{
   display: inline-block;
@@ -152,7 +153,7 @@
   left: 50%;
   position: absolute;
   transform:translate(-50%,-50%);
-  font-size: 32rpx;
+  font-size: 30rpx;
 }
 .container .subject-detail{
   /* height: 100rpx; */
@@ -192,5 +193,39 @@
 }
 .container .subject-detail .timeAndNum .num{
   display: inline-block;
+}
+.container .bottom-content{
+  width: 100%;
+  height: 100rpx;
+  position: fixed;
+  bottom: 0;
+  display: flex;
+}
+.container .bottom-content .flex1{
+  flex: 1;
+  position: absolute;
+  z-index: 99;
+}
+.container .bottom-content .flex1 .shouye{
+  width: 50rpx;
+  height: 50rpx;
+  display: inline-block;
+}
+.container .bottom-content .flex1 .shouye image{
+  width: 50rpx;
+  height: 50rpx;
+}
+.container .bottom-content .flex2{
+  flex: 1;
+  background-color: #e5433f;
+}
+.container .bottom-content .flex1 .share{
+  width: 50rpx;
+  height: 50rpx;
+  display: inline-block;
+}
+.container .bottom-content .flex1 .share image{
+  width: 50rpx;
+  height: 50rpx;
 }
 
