call的实现原理，浅拷贝和深拷贝,闭包的定义和作用

--- a/nya/miniprogram/pages/others/index.wxml
+++ b/nya/miniprogram/pages/others/index.wxml
@@ -1,7 +1,7 @@
 <!-- 公告栏以及编辑 -->
 <view class='container' wx:if='{{has_openid}}'>
 
-  <view class='content {{todisappear ? "tohide" : "" }}'>
+  <!-- <view class='content {{todisappear ? "tohide" : "" }}'>
     <view class='image'>
       <view class='image_box'>
         <image src='../../images/announcement.png' />
@@ -11,7 +11,8 @@
     <view class='text-content'>
       <text>{{addText}}</text>
     </view>
-  </view>
+  </view> -->
+  <announcement></announcement>
 
   <view class='ask-view {{todisappear ? "dohide" : "" }}'>
     <form bindsubmit='sendQuestion'>
